Fix schema updates from old versions: updatev4tov6 is updatev4tov7

BUG: 323062