libs/database/schemaupdater.h
@@ -80,7 +80,7 @@ private:
     bool copyV3toV4(const QString& digikam3DBPath, const QString& currentDBPath);
     bool performUpdateToVersion(const QString& actionName, int newVersion, int newRequiredVersion);
     bool updateToVersion(int targetVersion);
-    bool updateV4toV6();
+    bool updateV4toV7();
     bool updateV2toV4(const QString& sqlite2DBPath);
     void setLegacySettingEntries();
     void readVersionSettings();
